EXTRA_DIST = \
	man/8/ceph-authtool.rst	\
	man/8/ceph-clsinfo.rst	\
	man/8/ceph-conf.rst	\
	man/8/ceph-create-keys.rst	\
	man/8/ceph-debugpack.rst	\
	man/8/ceph-dencoder.rst	\
	man/8/ceph-deploy.rst	\
	man/8/ceph-detect-init.rst	\
	man/8/ceph-disk.rst	\
	man/8/cephfs.rst	\
	man/8/ceph-fuse.rst	\
	man/8/ceph-mds.rst	\
	man/8/ceph-mon.rst	\
	man/8/ceph-osd.rst	\
	man/8/ceph-post-file.rst	\
	man/8/ceph-rbdnamer.rst	\
	man/8/ceph-rest-api.rst	\
	man/8/ceph.rst	\
	man/8/ceph-run.rst	\
	man/8/ceph-syn.rst	\
	man/8/crushtool.rst	\
	man/8/librados-config.rst	\
	man/8/monmaptool.rst	\
	man/8/mount.ceph.rst	\
	man/8/osdmaptool.rst	\
	man/8/radosgw-admin.rst	\
	man/8/radosgw.rst	\
	man/8/rados.rst	\
	man/8/rbd-fuse.rst	\
	man/8/rbd-mirror.rst	\
	man/8/rbd-nbd.rst	\
	man/8/rbd-replay-many.rst	\
	man/8/rbd-replay-prep.rst	\
	man/8/rbd-replay.rst	\
	man/8/rbd.rst           \
	man/8/rbdmap.rst
